--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <input type="text" class="form-control" id="edtCEP" placeholder="Digite um CEP e clique em adicionar" autocomplete="off">
                 </div>
         </div>
-        <button type="button" class="btn btn-outline-primary col-2" id="btnAdicionar">Adicionar</button>
+        <button type="button" class="btn btn-outline-primary col-2" id="btnAdicionar" style="width: 150px;">Adicionar</button>
         <hr>
         <ul id="listaUl">
             <!-- Adicionando itens via js -->
